# inboxone

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: docker.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_app_settings.py  0003_message_folder_seen_index.py
backend/app/: cli.py  main.py
backend/app/api/: routes_accounts.py  routes_auth.py  routes_messages.py  routes_oauth_ms.py  routes_sync.py
backend/app/core/: activity.py  config.py  crypto.py  security.py
backend/app/db/: models.py  session.py  types.py
backend/app/schemas/: account.py  auth.py  message.py  oauth.py
backend/app/services/: account_connection.py  graph_client.py  imap_client.py  mail_parser.py  oauth_microsoft.py  smtp_client.py
backend/app/sync/: scheduler.py  worker.py
docker/: Dockerfile  entrypoint.sh
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  types.ts  useAccounts.ts  useActivity.ts  useAuth.ts  useMessages.ts  useMicrosoftOAuth.ts
frontend/src/components/: AccountEditorModal.tsx  AccountFilterRail.tsx  ComposeModal.tsx  ConfirmDialog.tsx  MessageList.tsx  MessageListItem.tsx  MessageReadingPane.tsx  NewMailWatcher.tsx  NotificationToggle.tsx  OAuthMicrosoftLinkFlow.tsx  Skeleton.tsx  StatusBar.tsx  TabTitleUnread.tsx  TabUnreadIndicator.tsx  ThemeToggle.tsx  Toaster.tsx  icons.tsx
frontend/src/pages/: InboxPage.tsx  LoginPage.tsx  SettingsAccountsPage.tsx
(+6 files in other folders)
