[project]
name = "inboxone"
version = "0.1.0"
description = "Self-hosted personal mail aggregator backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "imapclient>=3.0",
    "aiosmtplib>=3.0",
    "msal>=1.31",
    "httpx>=0.27",
    "cryptography>=43.0",
    "bcrypt>=4.0",
    "itsdangerous>=2.2",
    "apscheduler>=3.10",
    "pydantic-settings>=2.5",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
